--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Birthday</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="F:\Projects\Birthday\bootstrap\css\bootstrap.css">
+    <link rel="stylesheet" href="bootstrap\css\bootstrap.css">
     <link rel="stylesheet" href="styles/styles.css">
  
 </head>
@@ -22,7 +22,7 @@
     <audio id="birthday-audio" src="assets/happy-birthday-254480.mp3" style="display: none;"></audio>
 </body>
 <!-- JS -->
-<script src="F:\Projects\Birthday\bootstrap\js\bootstrap.js"></script>
+<script src="bootstrap\js\bootstrap.js"></script>
 <script src="scripts/main.js"></script>
 
 </html>
